--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div id="container">
-    <img id="hiddenImage" src="hidden.jpg" />
+    <img id="hiddenImage" src="https://files.catbox.moe/pgp7mb.jpg" />
     <canvas id="scratchCanvas"></canvas>
   </div>
 
@@ -42,7 +42,7 @@
 
     // Cover image
     const coverImage = new Image();
-    coverImage.src = "cover.jpg";
+    coverImage.src = "https://files.catbox.moe/86skry.png";
     coverImage.onload = () => {
       ctx.drawImage(coverImage, 0, 0, canvas.width, canvas.height);
     };
