--- a/index.html
+++ b/index.html
@@ -11,164 +11,42 @@
       margin: 0;
       overflow: hidden;
     }
-    canvas {
+
+    #container {
+      position: relative;
+      width: 80vmin; /* 1:1 ratio */
+      height: 80vmin;
+      overflow: hidden;
+      cursor: pointer; /* indicate interactivity */
+    }
+
+    #hiddenImage, #coverImage {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       position: absolute;
       top: 0;
       left: 0;
       transition: opacity 1s ease;
-    }
-    #container {
-      position: relative;
-      width: 400px;
-      height: 300px;
-      overflow: hidden;
-    }
-    #hiddenImage {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
     }
   </style>
 </head>
 <body>
   <div id="container">
     <img id="hiddenImage" src="https://files.catbox.moe/86skry.png" />
-    <canvas id="scratchCanvas"></canvas>
+    <img id="coverImage" src="https://files.catbox.moe/pgp7mb.jpg" />
   </div>
 
-  <audio id="scratchSound" src="https://freesound.org/data/previews/250/250629_4486188-lq.mp3"></audio>
-
   <script>
-    const canvas = document.getElementById('scratchCanvas');
-    const ctx = canvas.getContext('2d');
-    const container = document.getElementById('container');
-    const scratchSound = document.getElementById('scratchSound');
+    const coverImage = document.getElementById('coverImage');
 
-    let scratching = false;
-    let lastPos = null;
-    let particles = [];
-
-    const coverImage = new Image();
-    coverImage.src = "https://files.catbox.moe/pgp7mb.jpg";
-
-    function resizeCanvas() {
-      canvas.width = container.offsetWidth;
-      canvas.height = container.offsetHeight;
-      ctx.drawImage(coverImage, 0, 0, canvas.width, canvas.height);
-    }
-
-    coverImage.onload = resizeCanvas;
-    window.addEventListener("resize", resizeCanvas);
-
-    function getPos(e) {
-      const rect = canvas.getBoundingClientRect();
-      return {
-        x: (e.clientX || (e.touches && e.touches[0].clientX)) - rect.left,
-        y: (e.clientY || (e.touches && e.touches[0].clientY)) - rect.top
-      };
-    }
-
-    function getDistance(a, b) {
-      return Math.hypot(a.x - b.x, a.y - b.y);
-    }
-
-    function playSound() {
-      scratchSound.currentTime = 0;
-      scratchSound.play();
-    }
-
-    function scratch(e) {
-      if (!scratching) return;
-      e.preventDefault();
-
-      const pos = getPos(e);
-      ctx.globalCompositeOperation = "destination-out";
-      ctx.lineCap = "round";
-
-      let size = 20;
-
-      if (lastPos) {
-        const dist = getDistance(lastPos, pos);
-        size = Math.min(Math.max(dist, 20), 60);
-        ctx.lineWidth = size;
-
-        ctx.beginPath();
-        ctx.moveTo(lastPos.x, lastPos.y);
-        ctx.lineTo(pos.x, pos.y);
-        ctx.stroke();
-      } else {
-        ctx.beginPath();
-        ctx.arc(pos.x, pos.y, size, 0, Math.PI * 2);
-        ctx.fill();
-      }
-
-      // Sparkle particles
-      for (let i = 0; i < 5; i++) {
-        particles.push({
-          x: pos.x + (Math.random() - 0.5) * size,
-          y: pos.y + (Math.random() - 0.5) * size,
-          alpha: 1,
-          size: Math.random() * 3 + 1,
-          vy: -Math.random() * 1 - 0.5
-        });
-      }
-
-      lastPos = pos;
-
-      // Play scratch sound
-      playSound();
-    }
-
-    function stopScratch() {
-      scratching = false;
-      lastPos = null;
-      checkCompletion();
-    }
-
-    function checkCompletion() {
-      const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-      let cleared = 0;
-      for (let i = 3; i < imgData.data.length; i += 4) {
-        if (imgData.data[i] === 0) cleared++;
-      }
-      const percent = (cleared / (canvas.width * canvas.height)) * 100;
-      if (percent > 70) fadeOutCanvas();
-    }
-
-    function fadeOutCanvas() {
-      canvas.style.opacity = 0;
+    coverImage.addEventListener('click', () => {
+      coverImage.style.opacity = 0; // fade out cover image
       setTimeout(() => {
-        canvas.style.display = 'none';
+        coverImage.style.display = 'none';
         alert("Congratulations! You revealed the hidden image.");
-      }, 1000);
-    }
-
-    // Particle animation
-    function animate() {
-      requestAnimationFrame(animate);
-      ctx.globalCompositeOperation = 'source-over';
-      particles.forEach((p, i) => {
-        ctx.fillStyle = `rgba(255,255,255,${p.alpha})`;
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
-        ctx.fill();
-
-        p.y += p.vy;
-        p.alpha -= 0.02;
-        if (p.alpha <= 0) particles.splice(i, 1);
-      });
-    }
-    animate();
-
-    // Mouse events
-    canvas.addEventListener("mousedown", (e) => { e.preventDefault(); scratching = true; });
-    canvas.addEventListener("mouseup", stopScratch);
-    canvas.addEventListener("mousemove", scratch);
-
-    // Touch events
-    canvas.addEventListener("touchstart", (e) => { e.preventDefault(); scratching = true; });
-    canvas.addEventListener("touchend", stopScratch);
-    canvas.addEventListener("touchmove", scratch);
+      }, 1000); // match CSS transition
+    });
   </script>
 </body>
 </html>
